# coding-exercises

./: README.md
Advent of Code/: README.md
Advent of Code/AoC-2022/: Cargo.toml  README.md
