[package]
name = "AoC-2022"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Anish Pallati <anishp0828@gmail.com>"]
description = "Advent of Code 2022"
homepage = "https://github.com/ap-1/coding-exercises"
repository = "https://github.com/ap-1/coding-exercises"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
